# nemotron-sae

./: .gitignore  README.md  claude.sh  pyproject.toml  requirements-cpu.txt  requirements.txt
configs/: dev.yaml  prod.yaml
docs/: components_explaination.md
scripts/: deploy_gpu.sh  dev_smoke_test.sh  sanity_check.sh  setup_venv.sh
src/sae_pipeline/: __init__.py  config.py
src/sae_pipeline/cache/: manifest.py  reader.py  writer.py
src/sae_pipeline/cli/: cache_activations.py  evaluate.py  launch.py  plot.py  train_sae.py
src/sae_pipeline/data/: streaming.py
src/sae_pipeline/eval/: metrics.py  plots.py
src/sae_pipeline/hooks/: components.py  extractor.py
src/sae_pipeline/model/: loader.py  topology.py
src/sae_pipeline/sae/: base.py  jumprelu.py  train.py
tests/: test_config.py  test_dev_pipeline.py  test_eval_metrics.py  test_jumprelu_sae.py  test_plots.py  test_shard_roundtrip.py  test_topology_classifier.py
