[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sae_pipeline"
version = "0.1.0"
description = "SAE / transcoder training pipeline for Nemotron 3 Nano (hybrid Mamba-2 + Attn + MoE)"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "cuda: marks tests that require an NVIDIA GPU",
]
